--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "postinstall" : "prisma generate",
+    "postinstall" : "prisma generate && prisma db push",
     "dev": "next dev",
     "dev-secured": "next dev --experimental-https",
     "build": "next build",
