--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "postinstall" : "prisma generate && prisma db push",
+    "postinstall": "prisma generate && prisma db push",
     "dev": "next dev",
     "dev-secured": "next dev --experimental-https",
     "build": "next build",
@@ -17,7 +17,9 @@
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "next": "15.0.4",
+    "next-connect": "^1.0.0",
     "next-themes": "^0.4.4",
+    "nextjs-auth": "^0.0.5",
     "prisma": "^6.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
